[package]
name = "plonky2-keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2={git="https://github.com/InternetMaximalism/plonky2", rev="541e127"}
rand="0.8.5"
hex="0.4.3"
anyhow="1.0.69"
tiny-keccak={version="2.0.2", features=["keccak"]}